      former isn't allowed in package names but occasionally used in
      sonames
    + [FL] Remove trailing .so from SONAMEs
    + [FL] Also ignore static binaries in sub directories of /boot,
      not only in /boot itself. Patch by Guillem Jover
      (Closes: #320382)
  * checks/changelog-file:
    + [FL] Detect old FSF address additionally to the even older
      one
  * checks/debhelper{,.desc}:
    + [FL] Warn about using debhelper compat version lower than 3
      like debhelper itself
    + [FL] Drop package-lacks-versioned-build-depends-on-debhelper
      tag for compat versions < 5. With debhelper 4 even in oldstable
      issuing an error here is silly
    + [FL] Fix typo (s,debian/control,debian/compat,) in description of
      declares-possibly-conflicting-debhelper-compat-versions
  * checks/description{,.desc}:
    + [FL] Avoid double warning about description-is-dh_make-template
      in the same way we do it for the corresponding debmake tag
    + [FL] Policy section of Description field has changed
  * checks/fields{,.desc}:
    + [FL] Fix a lot of off-by-one errors in the policy references
      (caused by the addition of the Uploaders field). Unknowningly
      pointed out by Russ Allbery
    + [FL] Also use non_standards_archs when checking source package
      relations. Patch by Russ Allbery (Closes: #322291)
  * checks/manpages:
    + [FL] Don't issue warnings about 8bit characters in translated
      man pages. Patch by Denis Barbier (Closes: #321650)
  * checks/scripts:
    + [FL] Don't issue bashism warning on POSIX character classes ([[:foo:]]).
      Noted by Stephen Gran (Closes: #323098)
    + [FL] Remove some useless groupings in the bashism regexes

 -- Frank Lichtenheld <djpig@debian.org>  Thu,  4 Aug 2005 12:45:33 +0200

lintian (1.23.11) unstable; urgency=low

  * frontend/lintian:
    + [FL] Don't use dpkg --print-installation-architecture since
      it is deprecated, use dpkg --print-architecture instead.
  