@@ -56,11 +56,29 @@ Info: Package contains a '.cvsignore' file.  It may have been included by
  distributed normally. However, since upstream tarball often still contain
  those, it's only an informational tag.
 
+Tag: arch-inventory-file-in-source
+Type: info
+Info: Package contains a '.arch-inventory' file.  It may have been included by
+ accident. It is Version Control System metadata that should not be
+ distributed normally.
+
 Tag: source-contains-svn-control-dir
 Type: warning
 Info: Source contains a .svn directory. It was most likely included by
  accident, since Subversion version control directories usually don't belong
  in packages. Export from subversion rather than checkout.
+
+Tag: source-contains-bzr-control-dir
+Type: warning
+Info: Source contains a .bzr directory. It was most likely included by
+ accident, since bazaar-ng version control directories usually don't belong
+ in packages.
+
+Tag: source-contains-arch-control-dir
+Type: warning
+Info: Source contains a {arch} or .arch-ids directory. It was most likely
+ included by accident, since Arch version control directories usually don't
+ belong in packages.
 
 Tag: source-contains-CVS-dir
 Type: warning
