@@ -434,6 +434,18 @@ Info: Package contains a .svn directory. It was most likely installed by
  accident, since Subversion version control directories usually don't belong
  in packages.
 
+Tag: package-contains-bzr-control-dir
+Type: warning
+Info: Package contains a .bzr directory. It was most likely installed by
+ accident, since bazaar-ng version control directories usually don't belong
+ in packages.
+
+Tag: package-contains-arch-control-dir
+Type: warning
+Info: Package contains a {arch} or .arch-ids directory. It was most likely
+ installed by accident, since Arch version control directories usually don't
+ belong in packages.
+
 Tag: package-contains-xvpics-dir
 Type: error
 Info: Package contains a .xvpics directory. It was most likely installed by
@@ -442,6 +454,11 @@ Info: Package contains a .xvpics directory. It was most likely installed by
 Tag: cvsignore-file-in-package
 Type: warning
 Info: Package contains a '.cvsignore' file.  It may have been installed by
+ accident.
+
+Tag: arch-inventory-file-in-package
+Type: warning
+Info: Package contains a '.arch-inventory' file.  It may have been installed by
  accident.
 
 Tag: svn-commit-file-in-package
